src/fontra/views/fontoverview/fontoverview.css
body {
  overflow: scroll;
  user-select: none;
}

.main-container {
  display: grid;
  grid-template-columns: 22em 1fr;
  padding: 0em;
  box-sizing: border-box;
  gap: 0em;
  width: 100vw;
  height: 100vh;
}

#sidebar-container {
  display: grid;
  align-content: start;
  gap: 1em;
  padding: 1em 1em 1em 1em;
  background-color: var(--ui-element-background-color);
}

.font-overview-sidebar-shadow-box {
  box-shadow: 0px 0px 8px #0006;
}

font-overview-navigation {
  display: grid;
  gap: 1em;
}

#glyph-cell-view-container {
  overflow: auto;
}

.font-source-selector {
  display: grid;
  grid-template-columns: max-content auto;
  align-items: center;
  gap: 0.666em;
  padding-bottom: 1em;
}

.font-overview-section-header {
  font-weight: bold;
}

